syntax="proto3";

package linkvpb;

option go_package = "github.com/zbchi/linkv/proto/linkvpb";

service Linkv{
    rpc RawGet(RawGetRequest)returns(RawGetResponse);
    rpc RawPut(RawPutRequest)returns(RawPutResponse);
    rpc RawDelete(RawDeleteRequest)returns(RawDeleteResponse);
    rpc RawScan(RawScanRequest)returns(RawScanResponse);
}

message Context{
    
}

message RawGetRequest{
    Context context=1;
    string cf =2;
    bytes key=3;
}
message RawGetResponse{
    bytes value=1;
}

message RawPutRequest{
    Context context=1;
    string cf=2;
    bytes key=3;
    bytes value=4;
}
message RawPutResponse{}

message RawDeleteRequest{
    Context context=1;
    string  cf=2;
    bytes key=3;
}
message RawDeleteResponse{}

message RawScanRequest{
    Context context=1;
    string cf=2;
    bytes start_key=3;
    uint32 limit=4;
}
message RawScanResponse{
    repeated KvPair pairs =1;
}

message KvPair{
    bytes key=1;
    bytes value=2;
}